--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
 h1, h2 {
   font-family: Lato;
 }
+
+canvas{
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  background-color: black;
+  margin-top: -300px;
+  margin-left: -300px;
+
+}
